WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199502
[ContentChangeObserver] REGRESSION (
r247015
): facebook photo/video upload button is unresponsive to user interaction.
https://bugs.webkit.org/show_bug.cgi?id=199502
Summary
[ContentChangeObserver] REGRESSION (r247015): facebook photo/video upload but...
alan
Reported
2019-07-04 12:48:05 PDT
<
rdar://problem/52547473
>
Attachments
Patch
(6.06 KB, patch)
2019-07-04 13:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.95 KB, patch)
2019-07-04 21:23 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews113 for mac-highsierra
(3.02 MB, application/zip)
2019-07-04 23:08 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews211 for win-future
(14.13 MB, application/zip)
2019-07-05 04:00 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-07-04 13:13:36 PDT
Created
attachment 373470
[details]
Patch
alan
Comment 2
2019-07-04 21:23:19 PDT
Created
attachment 373478
[details]
Patch
EWS Watchlist
Comment 3
2019-07-04 23:08:51 PDT
Comment on
attachment 373478
[details]
Patch
Attachment 373478
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/12665199
New failing tests: webgl/1.0.2/conformance/context/context-release-upon-reload.html
EWS Watchlist
Comment 4
2019-07-04 23:08:53 PDT
Created
attachment 373479
[details]
Archive of layout-test-results from ews113 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 5
2019-07-05 04:00:55 PDT
Comment on
attachment 373478
[details]
Patch
Attachment 373478
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/12666444
New failing tests: storage/indexeddb/modern/get-keyrange.html storage/indexeddb/index-cursor.html
EWS Watchlist
Comment 6
2019-07-05 04:00:58 PDT
Created
attachment 373487
[details]
Archive of layout-test-results from ews211 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews211 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
WebKit Commit Bot
Comment 7
2019-07-05 12:12:49 PDT
Comment on
attachment 373478
[details]
Patch Clearing flags on attachment: 373478 Committed
r247167
: <
https://trac.webkit.org/changeset/247167
>
WebKit Commit Bot
Comment 8
2019-07-05 12:12:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug